# scitex-cv

./: .gitignore  CHANGELOG.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: docs.yml  pypi-publish-and-github-release-on-tag.yml  rtd-sphinx-build-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
docs/sphinx/: api.rst  conf.py  index.rst
src/scitex_cv/: __init__.py
src/scitex_cv/_dev/: __init__.py  _title_card.py
src/scitex_cv/_skills/scitex-cv/: 02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_cv/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_cv/_sphinx_html/.doctrees/: index.doctree
src/scitex_cv/_sphinx_html/_modules/: index.html
src/scitex_cv/_sphinx_html/_modules/scitex_cv/: _draw.html  _filters.html  _io.html  _transform.html
src/scitex_cv/_sphinx_html/_sources/: index.rst.txt
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_examples.py  test_smoke.py
tests/scitex_cv/: test__draw.py  test__filters.py  test__io.py  test__transform.py
tests/scitex_cv/_dev/: test__compose.py
